// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout works as expected with no tabs 1`] = `
<RCTScrollView
  automaticallyAdjustContentInsets={false}
  scrollsToTop={true}
>
  <View>
    <View
      style={
        Object {
          "paddingLeft": 40,
          "paddingRight": 40,
        }
      }
    >
      <Header
        artist={
          Object {
            "counts": Object {
              "articles": 0,
              "artworks": 0,
              "partner_shows": 0,
            },
            "has_metadata": false,
          }
        }
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`layout works as expected with one tab 1`] = `
<RCTScrollView
  automaticallyAdjustContentInsets={false}
  scrollsToTop={true}
>
  <View>
    <View
      style={
        Object {
          "paddingLeft": 40,
          "paddingRight": 40,
        }
      }
    >
      <Header
        artist={
          Object {
            "counts": Object {
              "articles": 0,
              "artworks": 0,
              "partner_shows": 0,
            },
            "has_metadata": true,
          }
        }
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      >
        <About
          artist={
            Object {
              "counts": Object {
                "articles": 0,
                "artworks": 0,
                "partner_shows": 0,
              },
              "has_metadata": true,
            }
          }
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`layout works as expected with three tabs 1`] = `
<RCTScrollView
  automaticallyAdjustContentInsets={false}
  scrollsToTop={true}
>
  <View>
    <View
      style={
        Object {
          "paddingLeft": 40,
          "paddingRight": 40,
        }
      }
    >
      <Header
        artist={
          Object {
            "counts": Object {
              "artworks": 2,
              "partner_shows": 1,
            },
            "has_metadata": true,
          }
        }
      />
      <View>
        <SwitchView
          onSelectionChange={[Function]}
          selectedIndex={1}
          style={
            Object {
              "marginBottom": 30,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 30,
            }
          }
          titles={
            Array [
              "ABOUT",
              "WORKS",
              "SHOWS",
            ]
          }
        />
        <View>
          <Artworks
            artist={
              Object {
                "counts": Object {
                  "artworks": 2,
                  "partner_shows": 1,
                },
                "has_metadata": true,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
